fixed modal z-index bug

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -415,7 +415,7 @@ table tbody tr:hover {
   min-width: 100%;
   min-height: 100%;
 
-  z-index: 999;
+  z-index: 1040;
 
   opacity: 0;
   pointer-events: none;
